# CVWW2024

./: README.md
Capture Application/: CMakeLists.txt  KinectV1.cpp  KinectV1.h  KinectV2.cpp  KinectV2.h  KinectV3Azure.cpp  KinectV3Azure.h  MotionCamPhoXi.cpp  MotionCamPhoXi.h  dataManipulation.cpp  dataManipulation.h  main.cpp  misc.cpp  misc.h
Evaluation Training/: synth_segmentation_experiment_cvww.py
Evaluation Training/Models/: model_0_00.keras  model_0_25.keras  model_0_50.keras  model_0_75.keras  model_1_00.keras  model_1_25.keras  model_1_50.keras  model_1_75.keras  model_2_00.keras  model_2_25.keras  model_2_50.keras  model_2_75.keras  model_3_00.keras  model_3_25.keras  model_3_50.keras  model_3_75.keras  model_4_00.keras
Noise Analysis/: Depth map viewer.py  Vistualisation - axial.py  Vistualisation - lateral.py  annotation.py  artificialNoise.py  axialErrorExtraction.py  borderDataExtraction.py  lateralErrorExtraction.py  misc.py  model.py
